Debug deployment workflows

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,3 +22,5 @@ jobs:
           # See docs/tutorials/04-deploy.md for configuring these
           PROJECT_ID: devfest-valencia-2024
           GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEVFEST_VALENCIA_2024 }}
+      - run: echo $GCP_SA_KEY && cat firebase-debug.log
+        if: failure()
